# monthly-game-reviewer

./: .gitignore  .pylintrc  install.sh  lint.sh  pyproject.toml  start.sh
src/: main.py
