[project]
name = "monthly-game-review"
version = "0.1.0"
requires-python = ">=3.10.12"
dependencies = [
  "requests==2.34.2",
  "rich==15.0.0"
]

[project.optional-dependencies]
dev = [
  "isort==7.0.0",
  "mypy==1.18.2",
  "pylint==4.0.2",
  "pytest==9.0.0",
  "ruff==0.14.4"
]
infra = []

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
indent = "  "
line_length = 120
src_paths = [
  "src"
]

[tool.mypy]
explicit_package_bases = true
mypy_path = [
  "src"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
include = [
  "pyproject.toml",
  "src/**/*.py"
]

[tool.ruff.lint]
select = [
  "W292",   # No Newline at EOF
  "W391"    # Extra Newline(s) at EOF
]
preview = true

[tool.setuptools]
package-dir = {"" = "src"}
